--- a/star.html
+++ b/star.html
@@ -129,7 +129,7 @@
         init: function () {
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
-            S.UI.simulate("嘉嘉|我是|黄饼饼|我会|一直|爱你~|#countdown 3|#time");
+            S.UI.simulate("嘉嘉|我是|黄饼饼|我会|一直|爱你~|我们|都会|变得|更好！|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
